//(C) Copyright [2020] Hewlett Packard Enterprise Development LP
//
//Licensed under the Apache License, Version 2.0 (the "License"); you may
//not use this file except in compliance with the License. You may obtain
//a copy of the License at
//
//    http:#www.apache.org/licenses/LICENSE-2.0
//
//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
//WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
//License for the specific language governing permissions and limitations
// under the License

syntax = "proto3";


service Roles{
    rpc CreateRole(RoleRequest) returns (RoleResponse){}
    rpc GetRole(GetRoleRequest)returns (RoleResponse){}
    rpc GetAllRoles(GetRoleRequest) returns (RoleResponse){}
    rpc DeleteRole(DeleteRoleRequest) returns (RoleResponse){}
    rpc UpdateRole(UpdateRoleRequest) returns (RoleResponse){}
    
}

// Message for Create and Update Role request 
message RoleRequest {
    string sessionToken=1;
    bytes RequestBody=2;
}

// Message for GetRole and GetAllRoles request
message GetRoleRequest{
    string sessionToken=1;
    string Id=2;
}

// Message for sending response
message RoleResponse{
    int32 statusCode = 1;
    string statusMessage = 2;
    map<string,string> header=3;
    bytes body = 4;
}

// Message for Delete Role request
message DeleteRoleRequest{
    string sessionToken=1;
    string ID=2;
}

// Message for Update Role request
message UpdateRoleRequest {
    string sessionToken=1;
    string Id=2;
    bytes  updateRequest=3;
}
